LWCLearnwithFLOWOrg/force-app/main/default/objects/SBAA_Package_IDs__c/SBAA_Package_IDs__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>The ID&apos;s used by the SBAA Package. Includes Quote record type ID&apos;s that are referenced by the &quot;Advanced Approvals Status and Record Update&quot; as well as the ID of the logo referenced by the advanced approval email templates.</description>
    <label>SBAA Package ID&apos;s</label>
</CustomObject>