LWCLearnwithFLOWOrg/force-app/main/default/objects/SBAA_Package_IDs__c/fields/In_Progress_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>In_Progress_Record_Type__c</fullName>
    <description>Id of the SBBQ In Progress Record Type. Update value when installing in a new environment.</description>
    <inlineHelpText>Id of the SBBQ In Progress Record Type. Update value when installing in a new environment.</inlineHelpText>
    <label>In Progress Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>